Did the merge and cleaned up a bunch works so nice

--- a/widgets/korhome/korhome.html
+++ b/widgets/korhome/korhome.html
@@ -2,11 +2,11 @@
 <input type="hidden" data-bind="hue_id"/>
 <table>
 <tr>
-<td><a href="#brighter" class="brighter">Brighter</a></td>
-<td><a href="#dimmer" class="dimmer">Dimmer</a></td>
+<td><a class="brighter btn">Brighter</a></td>
+<td><a class="dimmer btn">Dimmer</a></td>
 </tr>
 <tr>
-<td><a href="#off" class="off">Off</a></td>
-<td><a href="#on" class="on">On</a></td>
+<td><a class="off btn">Off</a></td>
+<td><a class="on btn">On</a></td>
 </tr>
 </table>
