cleaned up the logic with turning lights on and off to fix the need to double click - cleaned up the interface

--- a/widgets/huebutton/huebutton.html
+++ b/widgets/huebutton/huebutton.html
@@ -1,4 +1,4 @@
-<a class="off btn">
-    <h3 data-bind="light_name"></h3>
+<!-- <a class="off btn"> -->
+    <h2 data-bind="light_name"></h2>
     <input type="hidden" data-bind="hue_id"/>
-</a>
+<!-- </a> -->
